2007-11-18  Jim Evins  <evins@snaught.com>

	* libglabels/Makefile.am:
	* libglabels/str.h:
	* libglabels/str.c:
		Added lgl_str_utf8_casecmp().
	* libglabels/libglabels-private.h:
		Use lgl_str_utf8_casecmp() for UTF8_EQUAL macro -- do case insensitive comparisons.
	* libglabels/db.c: (lgl_db_get_brand_list):
		Use lgl_str_utf8_casecmp() to determine if we have seen brand before when building
		brand list.

2007-11-18  Jim Evins  <evins@snaught.com>

	* data/glade/template-designer.glade:
	* src/template-designer.c:
		Don't advance past name page, if brand and part match an existing template.

2007-11-18  Jim Evins  <evins@snaught.com>

	* libglabels/db.c: (lgl_db_register_template), (read_templates):
		When registering a new template, don't add to "User defined" category before
		writing to file.  Add to "User defined" category when reading from "~/.glabels"
		directory instead.  This will allow legacy templates (and manually created
		templates) to be automatically added to the "user defined" category.
	* libglabels/xml-template.c:
	(lgl_xml_template_create_template_node):
		Fixed typo/bug causing brand to be wrong.
	
2007-11-16  Jim Evins  <evins@snaught.com>

	* libglabels/db.c:
	* libglabels/db.h:
		Added return codes to lgl_db_register_template().  Added lgl_db_does_template_exist()
		function.  Automatically create "User defined" category and add to all user
		registered templates.
	* libglabels/xml-template.c:
	* libglabels/xml-template.h:
		Return number of bytes written from lgl_xml_template_write_templates_to_file() and
		lgl_xml_template_write_template_to_file().
	* docs/libglabels/libglabels-decl-list.txt:
	* docs/libglabels/libglabels-sections.txt:
	* docs/libglabels/libglabels-undocumented.txt:
	* docs/libglabels/tmpl/db.sgml:
	* docs/libglabels/tmpl/xml-template.sgml:
		Update documentation to reflect above changes.

2007-10-28  Jim Evins  <evins@snaught.com>

	* libglabels/xml-template.c: