@@ -1,3 +1,9 @@
+2007-11-20  Jim Evins  <evins@snaught.com>
+
+	* data/glade/template-designer.glade:
+	* src/template-designer.c:
+		Added warning icon when match brand and part match an existing template.
+
 2007-11-18  Jim Evins  <evins@snaught.com>
 
 	* libglabels/Makefile.am:
